fixed spacing issue in resume

--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -163,8 +163,13 @@ max-width: 150px;
 /* ==========================================================================
    Wrap Sections
    ========================================================================== */
-#about > div {
-	height: 2100px;
+#textbox > p.alignright1.col-xs-4{
+	text-align: right;
+	padding: 0px;
+}
+#textbox > p.alignleft1.col-xs-6{
+	text-align: left;
+	padding: 0px;
 }
 
 #headerwrap {
